feat : migrate to redis listener and Redis stream